Fix Moth trap name spacing

--- a/src/Survey/Moth/Location/Components/BottomSheetPointEntry/styles.scss
+++ b/src/Survey/Moth/Location/Components/BottomSheetPointEntry/styles.scss
@@ -36,7 +36,11 @@
         h4 {
           margin: 10px 0 0 0;
           font-weight: 900;
+          max-width: 50vw;
           color: #3b2354;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
 
         ion-label {
